<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#800080"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_gravar"
        android:textColor="#000000"
        app:showAsAction="never" />

    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_alterar"
        android:textColor="#000000"
        app:showAsAction="never" />

    <item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_excluir"
        android:textColor="#000000"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:icon="?attr/actionModeCloseDrawable"
        android:title="@string/menu_voltar"
        android:textColor="#000000"
        app:showAsAction="never" />


    <item
        android:id="@+id/item5"
        android:icon="@android:drawable/ic_search_category_default"
        android:textColor="#000000"
        android:title="@string/ver_pdf"
        app:showAsAction="never" />





</menu>
